--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ dataclasses-json==0.6.7
 emoji==2.14.1
 eval_type_backport==0.2.2
 exceptiongroup==1.2.2
+faiss-cpu==1.10.0
 fastapi==0.115.12
 filetype==1.2.0
 frozenlist==1.5.0
@@ -52,7 +53,7 @@ multidict==6.3.2
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 nltk==3.9.1
-numpy==2.2.4
+numpy==2.0.2
 olefile==0.47
 orjson==3.10.16
 packaging==24.2
